tests/language_modules/08_routines/invalid_semantics/unknown_routine_call.vf
module UnknownRoutineCall

procedure main()
is
    call missing()
end main

end UnknownRoutineCall